test/integration/bad/new/type-size-bad37.stan
data { simplex[0.0 while] x;}